Converted internal data structures to a better form.
Now have associated start and end events.

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -12,6 +12,7 @@ SET (gui_sources
     Model.h                             Model.cpp
     EventCanvasApp.h                    EventCanvasApp.cpp
     TimeLineCursor.h                    TimeLineCursor.cpp
+    event_database.h                    event_database.cpp
 )
 
 ADD_EXECUTABLE (right_track_gui  ${gui_sources} )
