Added about box support.

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -1,4 +1,4 @@
-FIND_PACKAGE ( wxWidgets REQUIRED net gl core base )
+FIND_PACKAGE ( wxWidgets REQUIRED net gl core base adv )
 INCLUDE ( ${wxWidgets_USE_FILE} )
 
 SET (gui_sources
@@ -22,15 +22,16 @@ ADD_EXECUTABLE (right_track_gui  ${gui_sources} )
 SET_TARGET_PROPERTIES( right_track_gui PROPERTIES
   VERSION ${right_track_VERSION}
 )
+add_definitions(-DRIGHT_TRACK_VERSION="${right_track_VERSION}")
 
 INCLUDE_DIRECTORIES ( . .. gen_files )
+
+TARGET_LINK_LIBRARIES ( right_track_gui ${wxWidgets_LIBRARIES} right_track )
 
 SET_TARGET_PROPERTIES (right_track_gui PROPERTIES
       COMPILE_DEFINITIONS    "${wxWidgets_DEFINITIONS};wxWidgets_DEFINITIONS_DEBUG"
       COMPILE_FLAGS          "${wxWidgets_CXX_FLAGS}"
 )
-
-TARGET_LINK_LIBRARIES ( right_track_gui ${wxWidgets_LIBRARIES} right_track )
 
 
 #
