--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -2,11 +2,11 @@ FIND_PACKAGE ( wxWidgets REQUIRED net gl core base adv )
 INCLUDE ( ${wxWidgets_USE_FILE} )
 
 SET (gui_sources
-    gen_files/EventViewFrame.h          gen_files/EventViewFrame.cpp
-    gen_files/MainFrame.h               gen_files/MainFrame.cpp
     gen_files/EventCanvas.h             gen_files/EventCanvas.cpp
-    gen_files/TextEditDialog.h          gen_files/TextEditDialog.cpp
     gen_files/EventTable.h              gen_files/EventTable.cpp
+   #  gen_files/EventViewFrame.h          gen_files/EventViewFrame.cpp
+    gen_files/RT_MainFrame.h               gen_files/RT_MainFrame.cpp
+    gen_files/TextEditDialog.h          gen_files/TextEditDialog.cpp
 
     EventTransportReaderGui.h           EventTransportReaderGui.cxx
     main.cpp
